--- a/A_dbms/templates/dbms/custom/custom/custom-table-c.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-table-c.html
@@ -7,6 +7,7 @@
             <th>机构性质</th>
             <th>所属行业</th>
             <th>企业划型</th>
+            <th>报送状态</th>
             <th>管护经理</th>
         </tr>
         </thead>
@@ -16,8 +17,9 @@
                 <td><a href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.name }}</a></td>
                 <td>{{ custom.company_custome.credit_code }}</td>
                 <td>{{ custom.company_custome.get_custom_nature_display }}</td>
-                <td>{{ custom.idustry.name }}</td>
+                <td>{{ custom.company_custome.get_industry_c_display }}</td>
                 <td>{{ custom.company_custome.get_typing_display }}</td>
+                <td>{{ custom.get_submission_status_display }}</td>
                 <td>{{ custom.managementor.name }}</td>
             </tr>
         {% endfor %}
