--- a/A_dbms/templates/dbms/custom/modl/mod_form/custom-c-add.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/custom-c-add.html
@@ -14,6 +14,11 @@
         <div class="col-sm-9"> {{ form_custom_c_add.typing }} </div>
         <label id="e_typing" class="pull-right">{{ form_custom_c_add.typing.errors }} </label>
     </div>
+    <div class="form-group"><!--所属行业-->
+        <label for="id_industry_c" class="col-sm-3 control-label">{{ form_custom_c_add.industry_c.label }}： </label>
+        <div class="col-sm-9"> {{ form_custom_c_add.industry_c }} </div>
+        <label id="e_industry_c" class="pull-right">{{ form_custom_c_add.industry_c.errors }} </label>
+    </div>
     <div class="form-group"><!--决策机构-->
         <label for="id_decisionor" class="col-sm-3 control-label">{{ form_custom_c_add.decisionor.label }}： </label>
         <div class="col-sm-9"> {{ form_custom_c_add.decisionor }} </div>
