--- a/A_dbms/templates/dbms/provide/modl/provide-add-mod.html
+++ b/A_dbms/templates/dbms/provide/modl/provide-add-mod.html
@@ -14,6 +14,7 @@
                 <form class="form-horizontal">
                     {% include 'dbms/provide/modl/mod_form/provide-add.html' %}
                     {% include 'dbms/provide/modl/mod_form/provide-add-ex.html' %}
+                    {% include 'dbms/provide/modl/mod_form/provide-add-db.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
