--- a/A_dbms/templates/dbms/provide/provide-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-scan.html
@@ -13,6 +13,9 @@
         {% include 'dbms/provide/modl/track-add-mod.html' %}
         {% include 'dbms/provide/modl/track-del-mod.html' %}
 
+        {% include 'dbms/provide/modl/charge-add-mod.html' %}
+        {% include 'dbms/provide/modl/charge-del-mod.html' %}
+
         {% include 'dbms/provide/modl/repay-plan-mod.html' %}
 
         {% include 'dbms/dun/modl/compensatory-add-mod.html' %}
@@ -31,6 +34,9 @@
     {% include 'dbms/provide/extra/js-track-plan-add.html' %}
     {% include 'dbms/provide/extra/js-track-add.html' %}
     {% include 'dbms/provide/extra/js-track-del.html' %}
+
+    {% include 'dbms/provide/extra/js-charge-del.html' %}
+    {% include 'dbms/provide/extra/js-charge-add.html' %}
 
     {% include 'dbms/provide/extra/js-repay-plan-add.html' %}
 
