--- a/A_dbms/templates/dbms/provide/provide_scan/provide-summry-body.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-summry-body.html
@@ -23,6 +23,20 @@
     还款方式：{{ provide_obj.notify.agree.get_repay_method_display }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     在保余额：{{ provide_obj.provide_balance }}</label>
+
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    保费率/利率(%){{ provide_obj.agree_rate }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    担保费(元)：{{ provide_obj.charge }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    咨询费/服务费(%)：{{ provide_obj.investigation_fee }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    咨询费/服务费(元)：{{ provide_obj.charge_fee }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    客户保证金比例(%){{ provide_obj.bond_proportion }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    客户保证金金额(元){{ provide_obj.bond_amount }}</label>
+
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     归档情况：{{ provide_obj.get_implement_display }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
