--- a/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
@@ -29,6 +29,11 @@
                 <a href="#compensatory" style="background-color: #f5f5f5" aria-controls="home" role="tab"
                    data-toggle="tab">代偿 </a></li>
         {% endif %}
+        {% if provide_obj.provide_charge.all %}
+            <li role="presentation">
+                <a href="#charge" style="background-color: #f5f5f5" aria-controls="home" role="tab"
+                   data-toggle="tab">收费 </a></li>
+        {% endif %}
 
     </ul>
 
@@ -46,5 +51,7 @@
             {% include 'dbms/provide/scan/tab/provide-track.html' %} </div>
         <div role="presentation" class="tab-pane" id="compensatory"> <!--代偿-->
             {% include 'dbms/provide/scan/tab/provide-compensatory.html' %} </div>
+        <div role="presentation" class="tab-pane" id="charge"> <!--收费-->
+            {% include 'dbms/provide/scan/tab/provide-charge.html' %} </div>
     </div>
 </div>
