--- a/A_dbms/templates/dbms/report/provide/provide_list-table.html
+++ b/A_dbms/templates/dbms/report/provide/provide_list-table.html
@@ -24,7 +24,11 @@
         <tbody>
         {% for provide in provide_list %}
             <tr style="padding: 0">
-                <td style="padding: 0">{{ forloop.counter }}</td>
+                <td style="padding: 0">
+                    <a target="_blank" href="{% url 'dbms:provide_scan' provide_id=provide.id %}">
+                        {{ forloop.counter }}
+                    </a>
+                </td>
                 <td style="padding: 0">{{ provide.notify.agree.lending.summary.custom.name }}</td>
                 <td style="padding: 0">{{ provide.get_provide_typ_display }}</td>
                 <td style="padding: 0" align="right">{{ provide.old_amount }}</td>
