--- a/A_dbms/templates/dbms/provide/extra/js-provide-add.html
+++ b/A_dbms/templates/dbms/provide/extra/js-provide-add.html
@@ -21,10 +21,28 @@
                 case ('1'):{#D-流贷#}
                     $('#form_provide_db').show();
                     break;
-                case ('11'):{#D-承兑#}
+                case ('11'):{#D-票据承兑担保#}
                     $('#form_provide_db').show();
                     break;
-                case ('21'):{#D-保函#}
+                case ('13'):{#D-信用证担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('19'):{#D-其他担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('21'):{#D-履约担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('25'):{#D-投标担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('26'):{#D-预付款担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('27'):{#D-质量保函#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('29'):{#D-其他#}
                     $('#form_provide_db').show();
                     break;
                 case ('31'):{#D-委贷#}
@@ -62,10 +80,28 @@
                 case ('1'):{#D-流贷#}
                     $('#form_provide_db').show();
                     break;
-                case ('11'):{#D-承兑#}
+                case ('11'):{#D-票据承兑担保#}
                     $('#form_provide_db').show();
                     break;
-                case ('21'):{#D-保函#}
+                case ('13'):{#D-信用证担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('19'):{#D-其他担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('21'):{#D-履约担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('25'):{#D-投标担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('26'):{#D-预付款担保#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('27'):{#D-质量保函#}
+                    $('#form_provide_db').show();
+                    break;
+                case ('29'):{#D-其他#}
                     $('#form_provide_db').show();
                     break;
                 case ('31'):{#D-委贷#}
