--- a/A_dbms/templates/dbms/report/report-summry.html
+++ b/A_dbms/templates/dbms/report/report-summry.html
@@ -3,4 +3,8 @@
     {% include 'dbms/report/summary/accrual.html' %}
     {% include 'dbms/report/summary/meeting.html' %}
     {% include 'dbms/report/summary/month.html' %}
+    {% include 'dbms/report/summary/supervise.html' %}
+
+
+
 </div>
