--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -16,6 +16,9 @@
         {% include 'dbms/custom/modl/spouse-del-mod.html' %}
         {% include 'dbms/custom/modl/custom-change-mod.html' %}
 
+        {% include 'dbms/custom/modl/custom-subsidiary-mod.html' %}
+        {% include 'dbms/custom/modl/subsidiary-del-mod.html' %}
+        
         {% include 'dbms/custom/modl/custom-article-add-mod.html' %}
         {% include 'dbms/custom/modl/controler-change-mod.html' %}
     </div>
@@ -33,6 +36,10 @@
     {% include 'dbms/article/extra/js-article-add.html' %}
 
     {% include 'dbms/custom/extra/js-custom-change.html' %}
+
+    {% include 'dbms/custom/extra/js-subsidiary-del.html' %}
+    {% include 'dbms/custom/extra/js-subsidiary-add.html' %}
+
     {% include 'dbms/custom/extra/js-controler-change.html' %}
     
     {% include 'dbms/js/js-search-custom.html' %}
