--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -3,7 +3,7 @@
         <label>客户情况</label>
         <label class="navbar-right">
             {% if PAGE_TITLE == '客户预览' %}
-                {% if 'article_add_ajax' in authority_list %}
+                {% if 'custom_subsidiary_add_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="addSubsidiaryB">增加信息 </a>
                 {% endif %}
                 {% if 'article_add_ajax' in authority_list %}
