--- a/A_dbms/templates/dbms/report/summary/supervise.html
+++ b/A_dbms/templates/dbms/report/summary/supervise.html
@@ -6,4 +6,10 @@
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_provide_report' p_typ=0 t_typ=1 %}">
            省金融担保系统(业务明细)</a></label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:custom_c_all' %}">
+           省金融担保系统(公司客户)</a></label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:custom_p_all' %}">
+           省金融担保系统(个人客户)</a></label>
 </div>
