--- a/A_dbms/templates/dbms/custom/custom/custom-table-c.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-table-c.html
@@ -16,7 +16,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for custom in p_list %}
+        {% for custom in custom_list %}
             <tr style="padding: 0">
                 <td style="padding: 0">
                     <a target="_blank" href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.name }}</a>
