--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-z.html
@@ -18,7 +18,7 @@
         <!--合同主体-->
         <div>
             <p>
-                为保障抵押权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障抵押权人权利的实现，抵押人愿意以其合法所有的财产为抵押权人设定抵押权，抵押人、抵押权人依照我国有关法律、法规，经协商一致，订立本合同。
+                为保障质权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障质权人权利的实现，抵押人愿意以其合法所有的财产为质权人设定质权，出质人、质权人依照我国有关法律、法规，经协商一致，订立本合同。
             </p>
             <p><strong>第一条 出质标的</strong></p>
             <p>1.1出质人提供的质押财产是：<strong><u>{{ counter_property_type }}</u></strong>（以下称“质物”）。</p>
@@ -42,8 +42,9 @@
             </u></strong>
                 （签字）</p>
             <p><strong>第二条 担保的主债权及担保范围</strong></p>
-            <p>2.1质押担保的主债权为主合同项下贷款本金(大写)人民币<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}元</u>）；<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰（千分之<u>{{ agree_rate_cn_q }}</u>）</strong>；贷款期限为<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止（若主合同约定的《借款凭证》记载的贷款起始日期、到期日期与本起始日期、到期日期不一致的，以《借款凭证》的记载为准），共<u><strong>{{ agree_term_str }}</strong></u>个月零<u><strong>/</strong></u>天。</p>
-            <p>2.2出质人担保的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和实现债权的费用（包括但不限于诉讼费、财产保全费、执行费、仲裁费、律师费、差旅费、保险费、评估费、拍卖费、公告费、质押登记费、质物处置费、过户费、其他费用）以及其他所有主合同债务人的应付费用。</p>
+            <p>2.1质押担保的主债权为债权人依据其与债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}签订的主合同（名称：<strong><u>{{ agree_obj.get_agree_name_display }}</u></strong>，编号：<strong><u>{{ agree_obj.agree_num }}</u></strong>）而享有的对债务人的债权。</p>
+            <p>主债权的金额和期限依主合同之约定。</p>
+            {% comment %} <p>2.2出质人担保的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和实现债权的费用（包括但不限于诉讼费、财产保全费、执行费、仲裁费、律师费、差旅费、保险费、评估费、拍卖费、公告费、质押登记费、质物处置费、过户费、其他费用）以及其他所有主合同债务人的应付费用。</p> {% endcomment %}
             <p>2.3<strong>当主合同债务人未按主合同约定按时清偿本合同担保范围内债务时，无论质权人对主合同项下的债权是否拥有其它担保或放弃、变更其他担保权或担保权顺位，且无论其他担保是否有主合同债务人自己所提供，质权人均有权直接要求出质人以质物在其担保范围内承担担保责任。</strong></p>
             <p>2.4根据《中华人民共和国担保法》第五条的规定，本合同双方特别约定如下：</p>
             <p><strong>本合同效力独立于主合同，主合同或其有关条款无效不影响本合同的效力。对主合同债务人在主合同无效后应承担的返还责任或赔偿责任，出质人应承担连带责任。</strong></p>
